--- a/front/date/index.html
+++ b/front/date/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Data Automática</h1>
+    <h1>Data e Hora Automática</h1>
     <footer>
         <p id="dataAtual"></p>
     </footer>
