--- a/formulário/index.html
+++ b/formulário/index.html
@@ -4,44 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Validação</title>
+    <title>Cadastro de Clientes</title>
     <link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1 class="text-center mt-5">Cadastro</h1>
     <div class="container d-flex justify-content-center align-items-center py-5">
+
         <form class="caixa">
+            <div class="form-row">
+                <div class="form-group col-md-8">
+                    <label for="inputAddress">Nome</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Maria Silva Santos" required>
+                </div>
+
+                <div class="form-group col-md-4">
+                    <label for="inputAddress">Telefone</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="(00) 00000-0000" required>
+                </div>
+            </div>
+
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="exemplo123@email.com" required>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="exemplo123@email.com"
+                        required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputPassword4">Senha</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="........." required>
+                    <input type="password" class="form-control" id="inputPassword4" placeholder="********" required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-8">
                     <label for="inputAddress">Logradouro</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Logradouro, 000">
+                    <input type="text" class="form-control" id="logradouro" placeholder="Logradouro, 000">
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputAddress">Bairro</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Jardim..., C.H.., Campos...">
+                    <input type="text" class="form-control" id="bairro" placeholder="Jardim..., C.H.., Campos...">
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputCity">Cidade</label>
-                    <input type="text" class="form-control" id="inputCity" placeholder="São Paulo">
+                    <input type="text" class="form-control" id="cidade" placeholder="São Paulo">
                 </div>
                 <div class="form-group col-md-3">
                     <label for="inputEstado">UF</label>
-                    <select id="inputEstado" class="form-control">
+                    <select id="uf" class="form-control">
                         <optgroup label="Região Sudeste">
                             <option value="SP" selected>São Paulo</option>
                             <option value="RJ">Rio de Janeiro</option>
@@ -83,18 +98,21 @@
                 </div>
                 <div class="form-group col-md-3">
                     <label for="inputCEP">CEP</label>
-                    <input type="text" class="form-control" id="inputCEP" placeholder="00000-000" required>
+                    <input type="text" class="form-control" id="cep" placeholder="00000-000" onblur="buscarEndereco()"
+                        required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="inputAddress">CPF</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="000.000.000.00">
+                    <input type="text" class="form-control" id="inputAddress" placeholder="000.000.000.00"
+                        onblur="testaCPF(strCPF)">
                 </div>
                 <div class="form-group col-md-8">
                     <label for="inputAddress">Complemento</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Casa 1, Apartamento 3, Predio D...">
+                    <input type="text" class="form-control" id="inputAddress"
+                        placeholder="Casa 1, Apartamento 3, Predio D...">
                 </div>
             </div>
 
@@ -106,10 +124,12 @@
                     </label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <button type="reset" class="btn btn-outline-warning">Apagar Infos.</button>
+            <button type="submit" class="btn btn-warning">Entrar</button>
         </form>
     </div>
 
+    <script src="script.js"></script>
     <script src="scripts/jquery-3.3.1.slim.min.js"></script>
     <script src="scripts/popper.min.js"></script>
     <script src="bootstrap-4.1.3/js/bootstrap.min.js"></script>
